tests/ui/return/ret-non-nil.stderr
error[E0069]: `return;` in a function whose return type is not `()`
  --> $DIR/ret-non-nil.rs:3:19
   |
LL | fn g() -> isize { return; }
   |           -----   ^^^^^^ return type is not `()`
   |           |
   |           expected `isize` because of this return type
   |
help: give the `return` a value of the expected type
   |
LL | fn g() -> isize { return 42; }
   |                          ++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0069`.
