tests/ui/return/ret-non-nil.rs
fn f() { return; }

fn g() -> isize { return; } //~ ERROR `return;` in a function whose return type is not `()`

fn main() { f(); g(); }
